# scrapCars

./: .env.example  .gitignore  Dockerfile  bs.py  docker-compose.yaml  main.py  middleware.py  pyproject.toml  requirements.txt
app/bot/: handler.py
app/core/: celery.py  celery_config.py  config.py  setup.py
app/errors/: errors.py
app/middlewares/: middleware.py
app/scraper/: bs.py
app/services/: av.py
app/tasks/: async_decorator.py  scrap.py  tasks.py
bot/: handler.py
core/: settings.py
database/: database.py  mongodb.py
database/crud/: chat.py
database/models/: chat.py
database/repositories/: av_links.py  base.py  chat.py
db/crud/: chat.py
models/: chat.py
services/: av.py  service.py
