[tool.poetry]
name = "scrapcars"
version = "0.1.0"
description = ""
authors = ["Alexey Balahanov <alexeybalahanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.25.1"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
motor = "^3.2.0"
bs4 = "^0.0.1"
aiohttp = "^3.8.4"
celery = {extras = ["beat"], version = "^5.3.1"}
redis = "^4.6.0"
asgiref = "^3.7.2"
typing-extensions = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
